# ascend-core

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
ascend/: __init__.py  contracts.py  executor.py  policy_engine.py  trust_engine.py
ascend/intelligence/: __init__.py  error_classifier.py  prompt_evolver.py  prompt_selector.py  recovery_engine.py  skill_evaluator.py  trace_analyzer.py
ascend/memory/: __init__.py  audit_logger.py  blackboard.py  consolidator.py  content_validator.py  context_budget.py  entity_memory.py  exemplars.py  failure_cases.py  gc.py  hierarchical_snapshots.py  messages.py  meta_memory.py  nda_boundary.py  recipes.py  snapshot_meta.py  trends.py
ascend/middleware/: __init__.py  budget_guard.py  loop_detection.py  pipeline.py  pre_gate.py  secret_guard.py  verification.py
docs/: GETTING_STARTED.md  TRUST_LEVELS.md
examples/: minimal_daemon.py  policy_example.yaml  safety_example.yaml
tests/: test_contracts.py  test_trust_engine.py
